dbus (1.6.16-1) UNRELEASED; urgency=low

  * New upstream stable release 1.6.16
  * Backport the new dbus-run-session tool from D-Bus 1.7

 -- Simon McVittie <smcv@debian.org>  Tue, 08 Oct 2013 14:54:24 +0100

dbus (1.6.14-1) unstable; urgency=low

  * New upstream stable release 1.6.14
    - fixes an infinite busy-loop if waitpid() is interrupted by a signal
      while spawning a subprocess (Closes: #721932)

 -- Simon McVittie <smcv@debian.org>  Thu, 05 Sep 2013 16:42:55 +0100

dbus (1.6.12-1) unstable; urgency=high

  * New upstream stable release 1.6.12
    - CVE-2013-2168: avoid a user-triggerable crash (denial of services)
      in system services that use libdbus

 -- Simon McVittie <smcv@debian.org>  Wed, 12 Jun 2013 14:38:34 +0100

dbus (1.6.10-1) unstable; urgency=low

  * New upstream stable release 1.6.10
  * Merge everything except the upstream development release from experimental:
    - On architectures where it's currently supported, do the
      debug build with --with-valgrind for better instrumentation
    - debian/rules: factor out production and debug configure flags
    - Add support for DEB_BUILD_OPTIONS=nodocs, which omits most documentation
      (allowing doxygen and xmlto to be avoided) and the dbus-1-doc package
    - Add support for DEB_BUILD_PROFILE=stage1, which does the same as nodocs
      and additionally makes the debug build not insist on building all tests
    - Make the development and debugging packages Multi-Arch: same,
      since their arch-dependent files are all arch-segregated
      (/usr/lib/TUPLE) or named according to a build-ID (/usr/lib/debug)
      (Closes: #689071). This is not actually useful until pkg-config
      becomes M-A: foreign (#631275).
  * Do the debug build --with-valgrind on mipsel, too

 -- Simon McVittie <smcv@debian.org>  Wed, 08 May 2013 10:52:51 +0100

dbus (1.6.8-1) unstable; urgency=low

  * Merge from experimental
  * New upstream stable release 1.6.6