@@ -71,6 +71,20 @@ Description: simple interprocess messaging system (daemon and utilities)
  The client-side library can be found in the libdbus-1-3 package, as it is no
  longer contained in this package.
 
+Package: dbus-udeb
+Section: debian-installer
+Priority: extra
+Package-Type: udeb
+Architecture: any
+Depends: ${shlibs:Depends},
+         ${misc:Depends}
+Description: simple interprocess messaging system (minimal runtime)
+ D-Bus is a message bus, used for sending messages between applications.
+ .
+ This package is a minimal version of the dbus and dbus-x11 packages,
+ for use in the Debian installer. It can run a session bus, but is not
+ suitable for use as a system bus.
+
 Package: dbus-x11
 Architecture: any
 Section: x11
@@ -113,6 +127,19 @@ Description: simple interprocess messaging system (library)
  It comes with several bindings, including GLib, Python, Qt and Java.
  .
  The daemon can be found in the dbus package.
+
+Package: libdbus-1-3-udeb
+Section: debian-installer
+Priority: extra
+Package-Type: udeb
+Architecture: any
+Depends: ${shlibs:Depends},
+         ${misc:Depends}
+Description: simple interprocess messaging system (minimal library)
+ D-Bus is a message bus, used for sending messages between applications.
+ .
+ This package is a minimal version of the libdbus-1-3 package,
+ for use in the Debian installer.
 
 Package: dbus-1-doc
 Section: doc
