@@ -1,0 +1,6 @@
+debian/tmp/etc/dbus-1/session.conf     etc/dbus-1
+debian/tmp/etc/dbus-1/session.d        etc/dbus-1
+debian/tmp-udeb/usr/bin/dbus-daemon    usr/bin
+debian/tmp-udeb/usr/bin/dbus-run-session usr/bin
+debian/tmp-udeb/usr/bin/dbus-uuidgen   usr/bin
+debian/tmp-udeb/usr/bin/dbus-launch    usr/bin
