@@ -2,6 +2,8 @@ dbus (1.6.16-1) UNRELEASED; urgency=low
 
   * New upstream stable release 1.6.16
   * Backport the new dbus-run-session tool from D-Bus 1.7
+  * Add udeb packages, so the graphical installer can use AT-SPI
+    (Closes: #723952)
 
  -- Simon McVittie <smcv@debian.org>  Tue, 08 Oct 2013 14:54:24 +0100
 
